--- a/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSSesionManagementMessages.yaml
@@ -19,6 +19,7 @@ messages :
         length: 4
       22:
         type: "S-NSSAI"
+        length: -1
       25:
         type: "DNN"
         length: -1
@@ -41,11 +42,23 @@ messages :
         58:
           type: "5GSM cause"
           length: 8
+        37:
+          type: "GPRS timer 3"
+          name: "Back-off timer value"
 
   - name: "PDU session establishment request"
     mandatory:
       - type: "Integrity protection maximum data rate"
         length: 16
+    optional:
+      9:
+        type: "PDU session type"
+        length: 4
+      A:
+        type: "SSC mode"
+        length: 4
+      28:
+        type: "5GSM capability"
 
   - name: "PDU session establishment accept"
     mandatory:
@@ -58,8 +71,20 @@ messages :
         length: -1
       - type: "Session-AMBR"
     optional:
+        58:
+          type: "5GSM cause"
+          length: 8
         29:
           type: "PDU address"
+        22:
+          type: "S-NSSAI"
+          length: -1
+        78:
+          type: "EAP message"
+        79:
+          type: "QoS flow descriptions"
+          name: "Authorized QoS flow descriptions"
+          length: -1
         25:
           type: "DNN"
           length: -1
@@ -68,7 +93,12 @@ messages :
     mandatory:
       - type: "5GSM cause"
         length: 8
-
+    optional:
+      37:
+        type: "GPRS timer 3"
+        name: "Back-off timer value"
+      78:
+        type: "EAP message"
 
 
 
