--- a/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionnary5GSMobilityManagementInformationElements.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionnary5GSMobilityManagementInformationElements.yaml
@@ -58,8 +58,8 @@ elements:
           2: "mobility registration updating"
           3: "periodic registration updating"
           4: "emergency registration"
-          5: "initial registration"
-          6: "initial registration"
+          5: "5initial registration"
+          6: "6initial registration"
           7: "reserved"
 
   - name: "NAS key set identifier"
@@ -391,9 +391,6 @@ elements:
           1: "3GPP access"
           2: "Non-3GPP access"
           3: "3GPP access and non-3GPP access"
-          4: "3GPP access"
-          5: "3GPP access"
-          6: "3GPP access"
           7: "reserved"
 
   - name: "Payload container type"
