--- a/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionnary5GSSesionManagementInformationElements.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionnary5GSSesionManagementInformationElements.yaml
@@ -83,9 +83,6 @@ elements:
           1: "SSC mode 1"
           2: "SSC mode 2"
           3: "SSC mode 3"
-          4: "SSC mode 1"
-          5: "SSC mode 2"
-          6: "SSC mode 3"
 
   - name: "PDU session type"
     pdu:
@@ -123,7 +120,7 @@ elements:
                       4: "Modify existing QoS rule and replace all packet filters"
                       5: "Modify existing QoS rule and delete packet filters"
                       6: "Modify existing QoS rule without modifying packet filters"
-                      7: "Reserved"
+                      7: "7Reserved"
                   pdus:
                     - keys:
                         - 1
