--- a/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSMobilityManagementMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSMobilityManagementMessages.yaml
@@ -19,6 +19,14 @@ messages:
         name: "Sequence number"
         length: 8
 
+  - name: "Integrity protected and ciphered with new 5G NAS security context"
+    mandatory:
+      - type: "Message authentication code"
+        length: 32
+      - type: "Sequence number"
+        name: "Sequence number"
+        length: 8
+
   - name : "Integrity protected"
     mandatory:
       - type: "Message authentication code"
@@ -56,9 +64,22 @@ messages:
              type: "5GS tracking area identity"
              name: "Last visited registered TAI"
              length: 48
+         40:
+           type: "Uplink data status"
+         50:
+           type: "PDU session status"
+         77:
+           type: "5GS mobile identity"
+           name: "Additional GUTI"
+           nBitLength: 16
+         25:
+           type: "Allowed PDU session status"
          70:
              type: "EPS NAS message container"
              length: -1
+         71:
+           type: "NAS message container"
+           nBitLength: 16
 
   - name: "Authentication request"
     mandatory:
@@ -140,14 +161,35 @@ messages:
         type: "NSSAI"
         name: "Allowed NSSAI"
         length: -1
+      11:
+        type: "NSSAI"
+        name: "Rejected NSSAI"
+        length: -1
+      31:
+        type: "NSSAI"
+        name: "Configured NSSAI"
+        length: -1
+      50:
+        type: "PDU session status"
+      26:
+        type: "PDU session reactivation result"
+      27:
+        type: "Service area list"
+        length: -1
+      5E:
+        type: "GPRS timer 3"
+        name: "T3512 value"
+      78:
+        type: "EAP message"
 
   - name: "Deregistration request"
     mandatory:
-      - type: "Spare half octet 3"
+      - type: "NAS key set identifier"
         length: 4
       - type: "deregistration type"
         length: 4
       - type: "5GS mobile identity"
+        nBitLength: 16
 
   - name: "Service request"
     mandatory:
@@ -163,6 +205,8 @@ messages:
         type: "Uplink data status"
       50:
         type: "PDU session status"
+      25:
+        type: "Allowed PDU session status"
       71:
         type: "NAS message container"
         nBitLength: 16
@@ -173,6 +217,8 @@ messages:
         type: "PDU session status"
       26:
         type: "PDU session reactivation result"
+      78:
+        type: "EAP message"
 
 
 
