--- a/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionary5GSCommonInformationElements.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS/dictionary5GSCommonInformationElements.yaml
@@ -4,22 +4,9 @@ elements:
       - name: "Extended protocol discriminator"
         length: 8
         namedValue:
-          14: "reserved"
-          30: "reserved"
           46: "5GS session management messages"
-          62: "reserved"
-          78: "reserved"
-          94: "reserved"
-          110: "reserved"
           126: "5GS mobility management messages"
-          142: "reserved"
-          158: "reserved"
-          174: "reserved"
-          190: "reserved"
-          206: "reserved"
-          222: "reserved"
-          238: "reserved"
-          254: "reserved"
+
   - name: "Security header type"
     pdu:
       - "@type": "MESSAGE_WRAPPER"
@@ -43,10 +30,10 @@ elements:
           66: "Registration accept"
           67: "Registration complete"
           68: "Registration reject"
-          69: "Deregistration request"
-          70: "Deregistration accept"
-          71: "Deregistration request"
-          72: "Deregistration accept"
+          69: "Deregistration request UE originating"
+          70: "Deregistration accept UE originating"
+          71: "Deregistration request UE terminated"
+          72: "Deregistration accept UE terminated"
           76: "Service request"
           77: "Service reject"
           78: "Service accept"
