MAJ dictionnary Nas-5GS

--- a/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSMobilityManagementMessages.yaml
+++ b/src/main/resources/nas/grammar/5gs/NAS-5GS-152/dictionnary5GSMobilityManagementMessages.yaml
@@ -182,14 +182,14 @@ messages:
       78:
         type: "EAP message"
 
-  - name: "Deregistration request"
+  - name: "Deregistration request UE originating"
     mandatory:
       - type: "NAS key set identifier"
         length: 4
       - type: "deregistration type"
         length: 4
       - type: "5GS mobile identity"
-        nBitLength: 16
+        nBitLength: 8
 
   - name: "Service request"
     mandatory:
