externalisation de la conf NAS

--- a/src/main/conf/ngap.properties
+++ b/src/main/conf/ngap.properties
@@ -159,3 +159,7 @@ TRACE_LEVEL= WARNING
 
 # test use only
 NB_ITERATION=10000
+
+#####################################################
+#version of protocol NAS-5GS to use for example for version 15.2.0 => 152
+nas.VERSION= 152
